# ebpf_example_code

./: README.md
.devcontainer/: devcontainer.json
c_ex/chardevice/: Makefile  chardevice.c
c_ex/hello-1/: .Module.symvers.cmd  .gitignore  .hello-1.ko.cmd  .hello-1.mod.cmd  .hello-1.mod.o.cmd  .hello-1.o.cmd  .hello-2.ko.cmd  .hello-2.mod.cmd  .hello-2.mod.o.cmd  .hello-2.o.cmd  .modules.order.cmd  Makefile  README.md  hello-1.c  hello-1.ko  hello-1.mod  hello-1.mod.c  hello-2.c  hello-2.ko  hello-2.mod  hello-2.mod.c  hello-3.c  hello-4.c  hello-5.c  modules.order
c_ex/multiple_file/: Makefile  linux-6.5.0-21-generic  start.c  stop.c
c_ex/my_first_bpf/: .gitignore  Makefile  README.md  bpf_helper_defs.h  gen.go  go.mod  main.go  xdp-pass.c  xdp_bpfeb.go  xdp_bpfel.go
dockerfiles/: Dockerfile  requirements.txt
go_ex/cfs/: cfs  go.mod  main.go
go_ex/cilium_ex/: cilium_ex  gen.go  go.mod  main.go
go_ex/go_ebpf/: READEM.md  go.mod  go.sum  go_ebpf_ex  main.go
go_ex/kprobe_ex/: .gitignore  README.md  gen.go  go.mod  kprobe_percpu_bpfeb.go  kprobe_percpu_bpfel.go
go_ex/only-in-go/: go.mod  kprobe_percpu.c  main.go
go_ex/tcp_server/: README.md  dockerfile  go.mod  go.sum  main.go
rust/ebpf_count/: Cargo.toml  ubuntu.dockerfile
rust/homunculus-cli/: Cargo.toml  README.md
rust/homunculus-cli/src/: main.rs
rust/rust-kubectl/: Cargo.toml  (+1 more)
rust_ex/: Cargo.toml
shellScript/: darwin_install.sh
web_crawler_mul_cpu/: Cargo.toml
web_crawler_mul_cpu/src/: main.rs
yaml/: golang.dockerfile  lima_ubuntu_ebpf.sh  ubuntu-lts-ebpf.yaml  ubuntu-lts.yaml
(+9 files in other folders)
