[package]
name = "web_crawler_mul_cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
affinity = "0.1.1"
failure = "0.1.8"
node = "0.0.1-pre.1"
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.9.0"
reqwest = { version = "0.11.25", features = ["blocking"] }
select = "0.6.0"
